--- a/Position & Grid/1.Simple-Site-Layout/styles.css
+++ b/Position & Grid/1.Simple-Site-Layout/styles.css
@@ -1,35 +1,36 @@
 body {
-    border-radius: 3px;
     background: rgb(181, 216, 255);
+    border-radius: 3px;
     padding: 5px 10px;
     display: grid;
-    grid-template-columns: 100px auto;
+    grid-template-columns: 100px repeat(1, auto);
+    gap: 10px;
     grid-template-areas:
         "header header"
         "aside main"
         "footer footer";
-    gap: 10px;
 }
 
-header h1 {
-    display: inline-block;
-    vertical-align: middle;
+header{
     grid-area: header;
 }
-
-aside ul {
+header h1{
+    display: inline-block;
+    vertical-align: middle;
+}
+aside{
+    grid-area: aside;
+}
+aside ul{
     list-style-type: none;
     margin: 0px;
     padding: 5px;
-    grid-area: aside;
 }
-
-aside a {
-    display: block;
-    padding: 5px 0px;
-    color: rgb(86, 40, 129);
-    text-decoration: none;
-    grid-area: aside;
+aside ul a{
+   display: block;
+   padding: 5px 0px;
+   color: rgb(86, 40, 129);
+   text-decoration: none;
 }
 
 main {
